--- a/photo-portfolio/src/components/SvgNav/SvgNav.module.css
+++ b/photo-portfolio/src/components/SvgNav/SvgNav.module.css
@@ -4,3 +4,6 @@
   height:0;
   }
 
+  .svgParent{
+    display: flex;
+  }
